--- a/recsys.ipynb
+++ b/recsys.ipynb
@@ -102,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_excel('/content/drive/MyDrive/rtmatric.xlsx', names=columns)"
+        "df = pd.read_excel('rtmatric.xlsx', names=columns)"
       ]
     },
     {
